--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "src/init",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
@@ -11,5 +10,13 @@
     "inquirer": "^7.3.3",
     "ora": "^5.3.0",
     "progress": "^2.0.3"
-  }
+  },
+  "scripts": {
+    "start": "node src/init"
+  },
+  "bin": {
+    "cli-init": "src/init.js"
+  },
+  "repository": "git@github.com:776A0A/demo-cli.git",
+  "author": "776A0A <240508428@qq.com>"
 }
