--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "cli",
-  "version": "1.0.0",
-  "main": "src/init",
-  "license": "MIT",
-  "devDependencies": {
-    "chalk": "^4.1.0",
-    "commander": "^7.0.0",
-    "download-git-repo": "^3.0.2",
-    "inquirer": "^7.3.3",
-    "ora": "^5.3.0",
-    "progress": "^2.0.3"
-  },
-  "scripts": {
-    "start": "node src/init"
-  },
-  "bin": {
-    "cli": "src/init.js"
-  },
-  "repository": "git@github.com:776A0A/demo-cli.git",
-  "author": "776A0A <240508428@qq.com>",
-  "dependencies": {
-    "boxen": "^5.0.0"
-  }
+    "name": "cli",
+    "version": "1.0.0",
+    "main": "src/init",
+    "license": "MIT",
+    "devDependencies": {
+        "chalk": "^4.1.0",
+        "commander": "^7.0.0",
+        "download-git-repo": "^3.0.2",
+        "eslint": "^7.18.0",
+        "inquirer": "^7.3.3",
+        "ora": "^5.3.0",
+        "progress": "^2.0.3",
+        "boxen": "^5.0.0"
+    },
+    "scripts": {
+        "start": "node src/init"
+    },
+    "bin": {
+        "cli": "src/init.js"
+    },
+    "repository": "git@github.com:776A0A/demo-cli.git",
+    "author": "776A0A <240508428@qq.com>"
 }
