--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "main": "src/init",
     "license": "MIT",
     "devDependencies": {
+        "boxen": "^5.0.0",
         "chalk": "^4.1.0",
         "commander": "^7.0.0",
         "download-git-repo": "^3.0.2",
         "eslint": "^7.18.0",
         "inquirer": "^7.3.3",
         "ora": "^5.3.0",
-        "progress": "^2.0.3",
-        "boxen": "^5.0.0"
+        "progress": "^2.0.3"
     },
     "scripts": {
         "start": "node src/init"
